# strata

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/actions/setup/: action.yaml
.github/workflows/: check.yaml  release.yaml
.planning/: .gitignore
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
examples/air-quality/: .cache.sqlite  .env  README.md  pyproject.toml  strata.yaml
examples/air-quality/.strata/dev/: registry.db
examples/air-quality/.strata/dev/lakehouse/air_quality_dev/: air_quality_features  pm25_predictions  weather_features
examples/air-quality/data/: air-quality-edinburgh.csv  historical-weather-edinburgh.csv
examples/air-quality/models/: pm25_model.joblib
examples/air-quality/scripts/: get_data.py  run_pipeline.py
examples/air-quality/src/air_quality/datasets/: air_quality.py
examples/air-quality/src/air_quality/monitoring/: air_quality_pm25.py
examples/air-quality/src/air_quality/pipelines/: inference.py  training.py
examples/air-quality/src/air_quality/tables/: air_quality.py  weather.py
examples/ccfraud/: .gitignore  README.md  pyproject.toml  strata.yaml
examples/ccfraud/scripts/: generate_data.py  run_pipeline.py
examples/ccfraud/src/ccfraud/: entities.py
examples/ccfraud/src/ccfraud/app/: api.py  frontend.py
examples/ccfraud/src/ccfraud/datasets/: fraud_detection.py
examples/ccfraud/src/ccfraud/pipelines/: inference.py  training.py
examples/ccfraud/src/ccfraud/tables/: accounts.py  cards.py  merchants.py  transactions.py
src/strata/: __init__.py  __main__.py  _compat.py  build.py  checks.py  cli.py  compile_output.py  compiler.py  core.py  dag.py  diff.py  discovery.py  errors.py  formats.py  freshness.py  output.py  pit.py  project.py  quality.py  registry.py  schema_evolution.py  settings.py  sources.py  types.py  validation.py
src/strata/backends/: __init__.py  base.py  factory.py
tasks/: check.just  clean.just  commit.just  format.just  install.just
tests/: conftest.py  test_benchmark_up.py  test_build.py  test_checks.py  test_cli_build.py  test_cli_down.py  test_cli_dx.py  test_cli_freshness.py  test_cli_ls.py  test_cli_publish.py  test_cli_quality.py  test_cli_up.py  test_cli_validate.py  test_compile_output.py  test_compiler.py  test_core_write_mode.py  test_dag.py  test_dataset.py  test_diff.py  test_discovery.py  test_duckdb_backend.py  test_entity.py  test_errors.py  test_feature_system.py  test_feature_table.py  test_formats.py  test_freshness.py  test_lookup.py  test_online_store.py  test_pit.py  test_plugin_configs.py  test_project.py  test_quality.py  test_schema.py  test_schema_evolution.py  test_settings.py  test_source_table.py  test_sources.py  test_sqlite_registry.py
(+31 files in other folders)
