[project]
name = "strata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chonalchendo", email = "110059232+chonalchendo@users.noreply.github.com" }
]
requires-python = ">=3.14.0"
dependencies = [
    "cyclopts>=4.5.1",
    "deltalake>=1.4.1",
    "loguru>=0.7.3",
    "pyarrow>=23.0.0",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.5",
    "rich>=14.3.1",
    "omegaconf>=2.3.0",
]

[project.scripts]
strata = "strata.cli:app"

[project.optional-dependencies]
duckdb = [
    "duckdb>=1.4.4",
    "ibis-framework[duckdb]>=11.0.0",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
check = [
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pip-audit>=2.7.0",
]
commit = [
    "commitizen>=4.13.0",
    "prek>=0.3.1",
]
dev = [
    "rust-just>=1.46.0",
]

[tool.uv.workspace]
members = ["examples/air-quality", "examples/ccfraud"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"
update_changelog_on_bump = true

[tool.ruff]
fix = true
indent-width = 4
line-length = 80
target-version = "py314"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"
