[project]
name = "air-quality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chonalchendo", email = "110059232+chonalchendo@users.noreply.github.com" }
]
requires-python = ">=3.14.2"
dependencies = [
    "openmeteo-requests>=1.7.5",
    "pandas>=2.3.3",
    "requests-cache>=1.2.1",
    "requests>=2.32.5",
    "strata[duckdb]",
    "retry-requests>=2.0.0",
    "geopy>=2.4.1",
]

[project.scripts]
air-quality = "air_quality:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
strata = { workspace = true }
