[project]
name = "ccfraud"
version = "0.1.0"
description = "Credit card fraud detection example with online serving"
readme = "README.md"
authors = [
    { name = "chonalchendo", email = "110059232+chonalchendo@users.noreply.github.com" }
]
requires-python = ">=3.14.2"
dependencies = [
    "strata[duckdb]",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.0",
    "xgboost>=3.0.0",
    "joblib>=1.5.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.35.0",
    "streamlit>=1.45.0",
    "requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
strata = { workspace = true }
